method update to java 8 version